[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmakers"
version = "3.21"
description = "rmakers extends Abjad with tools for rhythm construction."
authors = [ { name = "Trevor BaÄa", email = "trevor.baca@gmail.com" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["lilypond", "music composition", "music notation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software"
]
dependencies = [
    "abjad>=3.21"
]

[project.urls]
Homepage = "http://rmakers.github.io"

[tool.setuptools]
package-dir = { "" = "source" }

[tool.setuptools.packages.find]
where = ["source"]
include = ["rmakers*"]
